[package]
name = "rusty-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
axum-macros = "0.3.5"
base64 = "0.21.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.26.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
