[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
log = "0.4.17"
regex = "1.7.2"
stylist = { version = "0.12.0", features = ["yew"] }
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
