[package]
name = "lockrs_server"
version = "0.1.0"
authors = [ "Zach Quasius <zach@quasius.dev>" ]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lockrs_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
async-trait = "0.1.68"
axum = "0.6.12"
axum-macros = "0.3.7"
base64 = "0.21.0"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
cookie = "0.17.0"
deadpool = "0.9.5"
deadpool-redis = "0.12.0"
deadpool-runtime = { version = "0.1.2", features = ["tokio_1"] }
diesel = { version = "2.1", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.3.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.6"
headers = "0.3.8"
hyper = "0.14.26"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
redis = { version = "0.23.0", features = ["aio"] }
reqwest = "0.11.22"
ring = "0.16.20"
scoped-futures = "0.1.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
thiserror = "1.0.43"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout", "buffer", "limit"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde"] }
