[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["chrono", "postgres", "uuid"] }
dotenvy = "0.15.6"
ring = "0.16.20"
serde = { version = "1.0.158", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde"] }
