[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
axum = "0.6.12"
axum-macros = "0.3.7"
base64 = "0.21.0"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
deadpool = "0.9.5"
deadpool-redis = "0.12.0"
deadpool-runtime = { version = "0.1.2", features = ["tokio_1"] }
diesel = { version = "2.0.3", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.6"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
redis = { version = "0.23.0", features = ["aio"] }
ring = "0.16.20"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde"] }
